examples/java/grader_output.txt
Grading oatmealstanislav
Failed to precompile:
.../temp/oatmealstanislav_12345_12345_Homework.java/homework.java:3: error: class Homework is public, should be declared in a file named Homework.java
public class Homework {
       ^
1 error
Result: 0/100


Average score: 0/100


Key:
	Failed to Compile: Your submission did not compile due to a syntax or naming error
	Compiled with warnings: Your submission uses unchecked or unsafe operations
	Crashed due to signal SIGNAL_CODE: Your submission threw an uncaught exception.
	All signal error codes are described here: http://man7.org/linux/man-pages/man7/signal.7.html
	Exceeded Time Limit: Your submission took too much time to run (probably an infinite loop)

